# ai_podcast

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  experiments.ipynb  main.ipynb  pylintrc  pyproject.toml  requirements.txt
data/: script.txt  summaries.txt
docs/: tdd.md
scripts/: post_install.py
src/crawlers/: apify_crawler.py  base_crawler.py
src/crawlers/data_structures/: article.py  content.py
src/crawlers/transformers/: apify_article_transformer.py  apify_transformer.py  base_transformer.py
src/llm/: abstract_llm_invoker.py  huggingface_invoker.py  prompt_builder.py  utils.py
src/script_generation/: script_generator.py
src/search_and_retrieval/: chroma_vector_store.py  faiss_vector_store.py  search_engine.py  vector_store.py
src/search_and_retrieval/preprocessing_services/: embedding_service.py
src/storage/: database_manager.py
src/storage/databases/: article_sqlite_manager.py  postgresql_manager.py  sqlite_manager.py
src/ui/: app.py
src/utils/: logging_config.py
src/workflow/: article_workflow.py
tests/: test_article.py  test_article_workflow.py  test_chroma_vector_store.py  test_chunk_service.py  test_crawlers.py  test_embedding_service.py  test_faiss_vector_store.py  test_openai_invoker.py  test_prompt_builder.py  test_sqlite_manager.py  test_transformers.py
tests/unit/: test_apify_article_crawler.py  test_apify_article_transformer.py  test_article_sqlite_manager.py  test_chunk_service.py  test_embedding_service.py  test_prompt_builder.py
